--- a/Soccer-App/Soccer-App/Base.lproj/Main.storyboard
+++ b/Soccer-App/Soccer-App/Base.lproj/Main.storyboard
@@ -76,19 +76,19 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uum-22-Ipl">
                                 <rect key="frame" x="91" y="105" width="36" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nSp-MQ-dN7">
                                 <rect key="frame" x="64" y="197" width="63" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Opponent " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="50e-4P-SY4">
                                 <rect key="frame" x="46" y="279" width="81" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -112,12 +112,13 @@
                     <toolbarItems/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="gCq-io-QFo">
+                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="9tw-tE-Hbz" kind="relationship" relationship="viewControllers" id="vvx-Qm-NYO"/>
                         <segue destination="Kdi-ZU-Nl4" kind="relationship" relationship="viewControllers" id="6nP-58-sGb"/>
+                        <segue destination="9tw-tE-Hbz" kind="relationship" relationship="viewControllers" id="vvx-Qm-NYO"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KjE-5k-THJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -128,7 +129,7 @@
         <scene sceneID="sEv-nS-rTk">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9tw-tE-Hbz" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Games" id="zFr-SE-O7y"/>
+                    <tabBarItem key="tabBarItem" title="Games" id="min-Nm-yOz"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="3dh-RB-KRj">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -141,7 +142,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d7z-bw-fM7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="982.5" y="1290.5"/>
+            <point key="canvasLocation" x="1123.5" y="1290.5"/>
         </scene>
         <!--Add Game View Controller-->
         <scene sceneID="xvq-e7-Tq9">
@@ -168,13 +169,13 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGu-8h-xMd">
                                 <rect key="frame" x="79" y="122" width="63" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Opponent " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AtI-Xt-p5z">
                                 <rect key="frame" x="61" y="204" width="81" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zaj-Ks-xvY">
@@ -185,7 +186,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GDg-di-IcH">
                                 <rect key="frame" x="79" y="300" width="36" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -214,8 +215,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar tag="-1" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="abr-hD-Hlu">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <navigationBar tag="-1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="abr-hD-Hlu">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="kKA-fm-yHk"/>
                                 </constraints>
@@ -267,9 +268,12 @@
                             <constraint firstItem="abr-hD-Hlu" firstAttribute="leading" secondItem="eHH-j0-uzn" secondAttribute="leading" id="tXj-LN-nTs"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Players" id="V3K-MP-Yb9"/>
+                    <tabBarItem key="tabBarItem" title="Players" image="playericon.png" selectedImage="playericon.png" id="nnT-dH-Jav">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="2"/>
+                    </tabBarItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="PlayersTabBar" destination="nnT-dH-Jav" id="AR6-nx-xT1"/>
                         <outlet property="editButton" destination="ESV-OD-q0k" id="nLj-so-5bm"/>
                         <outlet property="navigationBar" destination="abr-hD-Hlu" id="2VL-JI-WJz"/>
                         <outlet property="tableview" destination="UQO-kg-BAf" id="L6D-xd-XYc"/>
@@ -277,7 +281,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ATy-ul-JN8" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="582.5" y="1268.5"/>
+            <point key="canvasLocation" x="599.5" y="1290.5"/>
         </scene>
         <!--User Detail View Controller-->
         <scene sceneID="j1i-Gg-dVw">
@@ -298,7 +302,11 @@
                                 </constraints>
                                 <items>
                                     <navigationItem title="Title" id="plP-tI-Qsd">
-                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="QAB-k0-5ut"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="QAB-k0-5ut">
+                                            <connections>
+                                                <segue destination="r7W-wL-JSc" kind="show" identifier="back2PlayersSegue" id="C2x-Ju-0Rb"/>
+                                            </connections>
+                                        </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" title="Save" id="xBd-uQ-z5c">
                                             <connections>
                                                 <action selector="saveButton:" destination="J4d-C3-GCf" id="wY3-Mu-l6l"/>
@@ -321,9 +329,6 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <segue destination="Kdi-ZU-Nl4" kind="show" identifier="back2PlayersSegue" id="Zbz-tb-jvD"/>
-                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hrg-Un-P7d">
                                 <rect key="frame" x="133" y="275" width="200" height="30"/>
@@ -565,6 +570,7 @@
                         <outlet property="height" destination="zwA-bY-aBo" id="Q5V-w5-INg"/>
                         <outlet property="lName" destination="Hrg-Un-P7d" id="cUL-d2-NUi"/>
                         <outlet property="navBar" destination="2uO-BG-XoC" id="vva-V0-lWF"/>
+                        <outlet property="navbarItem" destination="plP-tI-Qsd" id="0ci-2B-EwY"/>
                         <outlet property="phoneNumber" destination="2YN-Jx-Uu7" id="kuC-zB-ZDg"/>
                         <outlet property="playerImg" destination="3mo-xO-xLq" id="NDW-1X-Loc"/>
                         <outlet property="playerNumber" destination="efy-ff-gsR" id="K9Q-cE-iXY"/>
@@ -579,8 +585,6 @@
     <resources>
         <image name="CameraIcon.png" width="512" height="512"/>
         <image name="blankPlayer.png" width="600" height="568"/>
+        <image name="playericon.png" width="40" height="40"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="Zbz-tb-jvD"/>
-    </inferredMetricsTieBreakers>
 </document>
